--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@casl/react": "^3.1.0",
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-devtools": "^5.28.14",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "ahooks": "^3.7.11",
     "antd": "^5.16.0",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.25",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.22.4"
