--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/lodash.clonedeep": "^4.5.9",
     "ahooks": "^3.7.11",
     "antd": "^5.20.2",
+    "antd-img-crop": "^4.23.0",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
