--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@casl/ability": "^6.7.1",
     "@casl/react": "^3.1.0",
+    "@preact/signals": "^1.3.0",
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-devtools": "^5.28.14",
     "@types/lodash.clonedeep": "^4.5.9",
@@ -19,10 +20,12 @@
     "antd": "^5.20.2",
     "antd-img-crop": "^4.23.0",
     "browser-image-compression": "^2.0.2",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.25",
+    "fuse.js": "^7.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.13.0",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@tanstack/router-devtools": "^1.26.7",
     "@tanstack/router-vite-plugin": "^1.26.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/qs": "^6.9.16",
